--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"start": "node Server/server.js"
+		"start": "node Server/server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"homepage": "https://github.com/NatNgs/SpesoKolena#readme",
 	"repository": {
@@ -18,6 +19,10 @@
 	},
 	"dependencies": {
 		"express": "^4.16.4",
+		"html-minifier-terser": "^5.1.1",
+		"@node-minify/crass": "^5.3.0",
+		"@node-minify/core": "^5.3.0",
+		"@node-minify/google-closure-compiler": "^5.3.0",
 		"socket.io": "^2.1.0"
 	},
 	"devDependencies": {
